--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "start": "bun run ./src/index.ts",
+    "docker:push": "sudo docker push wachtelhund/assignment-api",
     "dev": "bun run ./src/index.ts --watch"
   },
   "devDependencies": {
