--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "bun-types": "^1.0.30"
   },
   "peerDependencies": {
@@ -21,6 +23,8 @@
     "express": "^4.18.3",
     "helmet": "^7.1.0",
     "mongoose": "^8.2.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
