--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,10 @@ version: '3.8'
 services:
   app:
     image: wachtelhund/assignment-api:latest
+    environment:
+      MONGO_URI: mongodb://root:example@localhost:27017
+      PORT: 5000
+
     ports:
       - "3000:3000"
     depends_on: 
