--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/body-parser": "^1.19.5",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "helmet": "^7.1.0",
