--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "bun run ./index.ts",
     "docker:publish": "sudo docker build -t docker.io/wachtelhund/assignment-api . && sudo docker push docker.io/wachtelhund/assignment-api",
     "docker:run": "docker-compose pull && docker-compose up -d",
-    "dev": "bun run ./index.ts --watch"
+    "dev": "bun run ./index.ts --watch",
+    "populate": "bun run ./src/utils/population/index.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -25,6 +26,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "helmet": "^7.1.0",
